Fixed bug with left button Removed arrow.jpg Cupcake actionbox is now invisible

--- a/fnatiistyle.css
+++ b/fnatiistyle.css
@@ -59,7 +59,6 @@ body{
 #leftscrollbutton{
     position: absolute;
     left: 5px;
-    background-image: url("fnatiimages/arrow.jpg");
     background-size: 40px 300px;
     background-repeat: no-repeat;
     transform: rotate(180deg);
@@ -69,12 +68,12 @@ body{
 #rightscrollbutton{
     position: absolute;
     right: 5px;
-    background-image: url("fnatiimages/arrow.jpg");
     background-size: 40px 300px;
     background-repeat: no-repeat;
 }
 
 .scrollbuttons{
+    background-color: red;
     top: 0px;
     width: 40px;
     height: 720px;
@@ -211,7 +210,7 @@ body{
     width: 50px;
     height: 50px;
     background-color: red;
-    opacity: 0.2;
+    opacity: 0;
     top: 300px;
     left: 990px;
 }
